# snake

./: CMakeLists.txt
include/: food.hpp  gamewindow.hpp  snake.hpp
src/: food.cpp  gamewindow.cpp  snake.cpp
tests/: print.cpp  print1.cpp  print2.cpp  print3.cpp  splice.cpp  test1.cpp
