cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_FLAGS "-std=c++11 -g")
project("snake")

# add_executable(print tests/print.cpp)
# target_link_libraries(print ncurses)

# add_executable(print1 tests/print1.cpp)
# target_link_libraries(print1 ncurses)

# add_executable(print2 tests/print2.cpp)
# target_link_libraries(print2 ncurses)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)